# mbasic

./: .dockerignore  .gitignore  8085.LST  CONTRIBUTING.md  HELLO_TEST.COM  INSTALL.md  LICENSE  MANIFEST.in  NPYSCREEN_REMOVAL.md  README.md  README_OPTIMIZATIONS.md  SESSION_SUMMARY.md  SFAOBDES.0  SFAVOC.0  STATUS.md  SZCURRENT.COM  SZFWRITE.COM  SZPUTCHAR.COM  TDL.LST  TEST8080_8080.COM  TEST_8080_FLOAT.COM  TEST_8080_NOFLOAT.COM  analyze_program.py  checkpoint.sh  custom_mem.c  docs_inconsistencies_v11_analysis.md  docs_inconsistencies_v11_catalog.txt  fre3.c  fre3.com  hello_test.bas  mbasic  mbasic.py  mkdocs-dev.yml  mkdocs-local.yml  mkdocs.yml  prtusing.bas  pyproject.toml  requirements.txt  setup.py  size_test_current.c  (+26 more)
.claude/: CLAUDE.md  settings.local.json
demos/: apache2-conf-test-docs.conf  benchmark_analyzer.py  demo_continue_visual.sh  test_integer_sizes.py
deployment/: deploy.sh  fix_503.sh
doc/: COMPILER_VS_INTERPRETER_DIFFERENCES.md  CORPUS_CLEANUP_2025-10-22.md  CORPUS_CLEANUP_FINAL_2025-10-22.md  CURSES_BACKEND_COMPLETE.md  INTERACTIVE_MODE_2025-10-22.md  OPTIMIZATION_STATUS.md  PHASE3_UI_ABSTRACTION_PROGRESS.md  SEMANTIC_ANALYZER.md  SESSION_2025-10-22_AUTONOMOUS.md  TESTS_WITH_RESULTS_INTEGRATION_2025-10-22.md  VISUAL_UI_REFACTORING_PLAN.md
docs/: MBASIC_PROJECT_OVERVIEW.md  PRESS_RELEASE.md  PROJECT_STATUS.md  README.md  URWID_UI.md  index.md  robots.txt  sitemap1.xml
games/: banner.bas  checkers.bas  furtrader.bas  hangman.bas  highiq.bas  roulette.bas  salvo.bas  superstartrek.bas  synonym.bas  word.bas
in/: strinstr.txt
site-dev/: 404.html  index.html  sitemap.xml  sitemap1.xml
src/: ast_nodes.py  basic_builtins.py  case_keeper.py  case_string_handler.py  codegen_backend.py  codegen_js_backend.py  crash_handler.py  debug_logger.py  file_io.py  immediate_executor.py  input_sanitizer.py  interactive.py  (+17 more)
(+1048 files in other folders)
